+ Add npm start + Re-structure pipeline so the pipeline execution creates job folder

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "An AI driven pipeline for story to metaverse generation",
   "main": "app.js",
   "scripts": {
+    "start": "http-server",
     "test": "http-server"
   },
   "author": "",
