--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ PySimpleGUI==4.60.5
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0.1
 requests==2.31.0
 six==1.16.0
 tqdm==4.66.1
