--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
+dacite==1.8.1
 dnspython==2.4.2
 Flask==2.3.2
 frozenlist==1.4.0
