temporarily use cpu for audio gen to avoid out of memory issues

--- a/server/config.yaml
+++ b/server/config.yaml
@@ -1,4 +1,5 @@
 stories_dir: "stories"
 OpenAIApiKey: "EnvironmentVariables"
 MongoDBConnectionString: "EnvironmentVariables"
-UseGpu: true
+UseGpuImageGen: true
+UseGpuAudioGen: false
