Some test changes to see how prompts need to change for dalle-only runs

--- a/server/config.yaml
+++ b/server/config.yaml
@@ -1,5 +1,5 @@
 stories_dir: "stories"
 OpenAIApiKey: "EnvironmentVariables"
 MongoDBConnectionString: "EnvironmentVariables"
-UseGpuImageGen: true
-UseGpuAudioGen: true
+UseGpuImageGen: false
+UseGpuAudioGen: false
